<resources>

    <!-- General Resources -->
    <string name="app_name">Trackap</string>

    <!-- Fake data -->
    <string name="fake_date">"February 14 1997"</string>
    <string name="fake_time">18:30</string>

    <!-- Useful -->
    <string name="save_space">Save\u0020</string>
    <string name="from_space">From\u0020</string>
    <string name="add">Add</string>
    <string name="to">To </string>
    <string name="all_day">All-day</string>
    <string name="space_added">\u0020added !</string>
    <string name="space_removed">\u0020removed !</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>

    <!-- Friend Resources -->
    <string name="friend_name">Friend Name</string>
    <string name="friend_email">friend@email.com</string>

    <!-- Meeting Resources -->
    <string name="meeting_title">Meeting Title</string>
    <string name="meeting_title_hint">Enter a meeting title</string>
    <string name="meeting_location_hint">Enter a meeting location</string>
    <string name="meeting_add_friends_hint">Add friends</string>

</resources>
