<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.corti.trackap.activities.EditFriend">

    <LinearLayout
        android:id="@+id/edit_friend_tool_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/edit_friend_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:tint="@color/colorAccent"
            android:background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_arrow_back_24dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.56" />

        <Button
            android:id="@+id/edit_friend_save"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="?android:selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_space" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/edit_meeting_set_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_friend_tool_layout">

        <ImageView
            android:id="@+id/editFriend_contactPicture"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/holo_blue_bright" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editFriend_contactPicture">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/editFriend_contact_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:tint="@color/blueGrey_600"
                        app:srcCompat="@drawable/ic_person_24dp" />

                    <TextView
                        android:id="@+id/editFriend_nameDisplay"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/friend_name" />
                </TableRow>

                <TableRow
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/editFriend_email_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:tint="@color/blueGrey_600"
                        app:srcCompat="@drawable/ic_email_24dp" />

                    <TextView
                        android:id="@+id/editFriend_emailDisplay"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/friend_email" />

                </TableRow>

                <TableRow
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp">

                    <ImageView
                        android:id="@+id/editFriend_birthday_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"
                        android:tint="@color/blueGrey_600"
                        app:srcCompat="@drawable/ic_date_range_24dp" />

                    <TextView
                        android:id="@+id/editFriend_birthday"
                        android:clickable="true"
                        android:focusable="false"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fake_date" />

                </TableRow>

            </TableLayout>


        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
