<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TITLE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/itemMeeting_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/meeting_title"
                android:textSize="@dimen/meeting_list_item_title_font_size" />

        </LinearLayout>

        <!-- LOCATION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/itemMeeting_location_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:tint="@color/blueGrey_600"
                app:srcCompat="@drawable/ic_location_on_24dp" />

            <TextView
                android:id="@+id/itemMeeting_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/meeting_title" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- START DATE AND TIME -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/itemMeeting_start_date_time_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:tint="@color/blueGrey_600"
                app:srcCompat="@drawable/ic_access_time_24dp" />

            <TextView
                android:id="@+id/itemMeeting_start_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/fake_date" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/itemMeeting_start_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/fake_time" />

        </LinearLayout>

        <!-- END DATE AND TIME -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="5dp">

            <Space
                android:layout_width="29dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/itemMeeting_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/fake_date" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/itemMeeting_end_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/fake_time" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>